# RAG-System

./: .env.example  .gitignore  README.md  TUTORIAL.md  config.py  pyproject.toml  requirements-lock.txt
api/: __init__.py  server.py
database/: __init__.py  postgres.py  qdrant.py
docker/: .env.example  docker-compose.yml  litellm_config.yaml
ingestion/: __init__.py  chunker.py  embedder.py  loaders.py  pipeline.py
retrieval/: __init__.py  retriever.py
